--- a/lms_automation/templates/base.html
+++ b/lms_automation/templates/base.html
@@ -25,6 +25,7 @@
             <div class="navbar-nav ms-auto">
                 <a class="nav-link" href="{{ url_for('index') }}">Home</a>
                 <a class="nav-link" href="{{ url_for('player_registration') }}">Join Game</a>
+                <a class="nav-link" href="{{ url_for('rules') }}">Rules</a>
                 <a class="nav-link" href="{{ url_for('admin_dashboard') }}">Admin</a>
             </div>
         </div>
